fixed issue with invisible submit button on mobile

--- a/GridLocked/static/styles.css
+++ b/GridLocked/static/styles.css
@@ -22,6 +22,14 @@ body{
     text-align: right;
 }
 
+.login-form{
+    padding-left: 25px;
+}
+
+.button{
+    background-color: white;
+}
+
 @media only screen and (max-device-width: 480px) {
     .navigation-links{
         justify-content: space-between;
